--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,15 +16,15 @@ services:
       - '8080:8080'
       - '80:80'
 
-  # backend:
-  #   container_name: backend
-  #   restart: always
-  #   build:
-  #     context: ./backend
-  #     dockerfile: Dockerfile
-  #     target: prod
-  #   volumes:
-  #     - ./backend:/app:delegated
-  #     - /app/node_modules
-  #   ports:
-  #     - '8081:8081'
+  backend:
+    container_name: backend
+    restart: always
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+      target: prod
+    volumes:
+      - ./backend:/app:delegated
+      - /app/node_modules
+    ports:
+      - '8081:8081'
