--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
   ui:
     container_name: ui
     restart: always
+    image: ${REGISTRY_HOST}/dockertest-pipeline-ui:latest
     build:
       context: ./ui
       dockerfile: Dockerfile
@@ -19,6 +20,7 @@ services:
   backend:
     container_name: backend
     restart: always
+    image: ${REGISTRY_HOST}/dockertest-pipeline-backend:latest
     build:
       context: ./backend
       dockerfile: Dockerfile
