--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,18 @@
-version: 2.1
-orbs:
-  node: circleci/node@1.1.6
+version: 2
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
+  build:
+    docker:
+      - image: node:11.10.1
+
+    working_directory: ~/repo
+    
+    environment:
+      NODE_ENV: development
+      TARGET: dev
+
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
-workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+      - run:
+          name: Run unit tests
+          command: echo 'running tests here'
+
