--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,22 +25,23 @@ jobs:
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
             mv /tmp/docker/* /usr/bin
         
-        # This should go into custom primary image, here's only for the sake of explanation
+      # This should go into custom primary image, here's only for the sake of explanation
       - run:
           name: Install Docker Compose
           command: |
             set -x
-            curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
+            curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
             chmod +x /usr/local/bin/docker-compose
       
       - run:
-          name: Build service
-          command: docker-compose --build
+          name: Start container and verify it's working
+          command: |
+            set -x
+            docker-compose up -d
       
       - deploy:
           name: Build and push Docker image
           command: |
-            TAG="0.1.${CIRCLE_BUILD_NUM}"
             docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
             docker-compose push
   
