--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,11 @@
 version: 2
+executorType: machine
 jobs:
   build:
     docker:
       - image: circleci/node:9.4.0
 
-    working_directory: ~/repo
+    working_directory: ~/repo/backend
     
     environment:
       NODE_ENV: development
@@ -12,43 +13,40 @@ jobs:
 
     steps:
       - checkout
-      - setup_remote_docker
       - run:
           name: Start container and verify it's working
           command: docker-compose up --build
 
-    # steps:
-    #   - checkout
-    #   - run:
-    #       name: Run unit tests
-    #       command: echo 'running tests here'
+    steps:
+      - checkout
+      - run:
+          name: Run unit tests
+          command: echo 'running tests here'
 
-    #   # - run:
-    #   #     name: Install Docker client
-    #   #     command: |
-    #   #       set -x
-    #   #       VER="17.03.0-ce"
-    #   #       curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-    #   #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-    #   #       mv /tmp/docker/* /usr/bin
-        
-    #   # This should go into custom primary image, here's only for the sake of explanation
-    #   - run:
-    #       name: Install Docker Compose
-    #       command: |
-    #         set -x
-    #         curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
-    #         chmod +x /usr/local/bin/docker-compose
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
       
-    #   - run:
-    #       name: Start container and verify it's working
-    #       command: |
-    #         set -x
-    #         docker-compose up -d
+      - run:
+          name: Start container and verify it's working
+          command: |
+            set -x
+            docker-compose up -d
+            # docker-compose will start 2 containers, the one with service will be named `contacts`
+            # we start another container with curl in the same network as `contacts`, this way we have
+            # all exposed ports from `contacts` available on `localhost` in this new container
+            docker run --network container:contacts \
+              appropriate/curl --retry 10 --retry-delay 1 --retry-connrefused http://localhost:8080/contacts/test
       
-    #   - deploy:
-    #       name: Build and push Docker image
-    #       command: |
-    #         docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-    #         docker-compose push
-  
+      - deploy:
+          name: Build and push Docker image
+          command: |
+            TAG="0.1.${CIRCLE_BUILD_NUM}"
+            docker build -t $DOCKER_LOGIN/dockertest-pipeline-backend:$TAG .
+            docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
+            docker push $DOCKER_LOGIN/dockertest-pipeline-backend:$TAG
