--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,11 @@ jobs:
       #     name: Run tests
       #     command: |
       #       docker-compose -f ./docker-compose.test.yml up
+
+      - run:
+          name: create containers
+          command: |
+            docker-compose up --build
       - deploy:
           name: Push application Docker image
           command: |
