--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,11 +33,11 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t app/backend .
+            docker build --cache-from=app -t app/ ./backend
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t app/ui .
+            docker build --cache-from=app -t app ./ui
       - run:
           name: Save Docker image layer cache
           command: |
