--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t app/ ./backend
+            docker build --cache-from=app -t app ./backend
       - run:
           name: Build application Docker image
           command: |
