--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,14 +30,14 @@ jobs:
           command: |
             set +o pipefail
             docker load -i /caches/app.tar | true
+      # - run:
+      #     name: Build BACKEND application Docker image 
+      #     command: |
+      #       docker build --target=test --cache-from=app -t app ./backend
       - run:
-          name: Build application Docker image
+          name: Build UI application Docker image
           command: |
-            docker build --cache-from=app -t app ./backend
-      - run:
-          name: Build application Docker image
-          command: |
-            docker build --cache-from=app -t app ./ui
+            docker build --target=test --cache-from=app -t app ./ui
       - run:
           name: Save Docker image layer cache
           command: |
