--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.0'
+version: '3.4'
 
 services:
 
@@ -9,6 +9,7 @@ services:
     build:
       context: ./ui
       dockerfile: Dockerfile
+      target: test
     volumes:
       - ./ui:/app:delegated
       - /app/node_modules
@@ -19,17 +20,17 @@ services:
       - 8080
       - 80
 
-  backend:
-    container_name: backend
-    restart: always
-    image: ${REGISTRY_HOST}/dockertest-pipeline-backend:latest
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    volumes:
-      - ./backend:/app:delegated
-      - /app/node_modules
-    ports:
-      - '8081:8081'
-    expose:
-      - 8081
+  # backend:
+  #   container_name: backend
+  #   restart: always
+  #   image: ${REGISTRY_HOST}/dockertest-pipeline-backend:latest
+  #   build:
+  #     context: ./backend
+  #     dockerfile: Dockerfile
+  #   volumes:
+  #     - ./backend:/app:delegated
+  #     - /app/node_modules
+  #   ports:
+  #     - '8081:8081'
+  #   expose:
+  #     - 8081
