--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
       - run:
           name: Build UI application Docker image
           command: |
-            docker build --target=test --cache-from=app -t app ./ui/Dockerfile.test
+            docker build -f Dockerfile.test --target=test --cache-from=app -t app ./ui
       - run:
           name: Save Docker image layer cache
           command: |
